overlays/test-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
  - port: 3000
    targetPort: 80
